Fixes people listing page with uneven number cards

--- a/styleguide/source/assets/scss/05-pages/_people-listing.scss
+++ b/styleguide/source/assets/scss/05-pages/_people-listing.scss
@@ -12,10 +12,10 @@
     min-height: 100%;
     justify-content: space-between;
 
-    &::after {
-      content:"";
+    &:after {
+      content: '';
       display: block;
-      margin-left: 48.38%;
+      margin-left: 21.91%;
     }
   }
 
